--- a/i3/config
+++ b/i3/config
@@ -51,6 +51,8 @@ bindsym Mod1+Shift+q kill
 bindsym Mod1+semicolon split h
 # split in vertical orientation
 bindsym Mod1+v split v
+# toggle between splits
+bindsym Mod1+t split toggle
 # enter fullscreen mode for the focused container
 bindsym Mod1+f fullscreen toggle
 # change container layout (stacked, tabbed, toggle split)
@@ -109,13 +111,10 @@ bindsym Mod1+Shift+8 move container to workspace number $ws8
 bindsym Mod1+Shift+9 move container to workspace number $ws9
 bindsym Mod1+Shift+0 move container to workspace number $ws10
 
-# --------------- MISC CONFIG ---------------
-# reload the configuration file
-bindsym Mod1+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym Mod1+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym Mod1+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+# --------------- APPEARANCE ---------------
+default_border normal 2
+default_floating_border normal 2
+
 
 # --------------- MODES ---------------
 # resize window (you can also use the mouse for that)
@@ -144,6 +143,16 @@ mode "resize" {
 }
 
 bindsym Mod1+r mode "resize"
+
+# --------------- MISC CONFIG ---------------
+# reload the configuration file
+bindsym Mod1+Shift+c reload
+# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+bindsym Mod1+Shift+r restart
+# exit i3 (logs you out of your X session)
+bindsym Mod1+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+# start terminal on startup
+exec --no-startup-id i3-sensible-terminal
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
