--- a/i3/config
+++ b/i3/config
@@ -114,7 +114,8 @@ bindsym Mod1+Shift+0 move container to workspace number $ws10
 # --------------- APPEARANCE ---------------
 default_border normal 2
 default_floating_border normal 2
-
+gaps inner 8
+gaps outer 4
 
 # --------------- MODES ---------------
 # resize window (you can also use the mouse for that)
@@ -156,9 +157,9 @@ exec --no-startup-id i3-sensible-terminal
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-}
+# bar {
+#        status_command i3status
+#}
 
 
 # DEFAULT STUFF THAT I HAVEN'T TOUCHED YET
@@ -199,7 +200,3 @@ bindsym Mod1+d exec --no-startup-id dmenu_run
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindsym Mod1+d exec --no-startup-id i3-dmenu-desktop
-
-
-
-
