[2023-09-20_23:23] pacman install/remove hook

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -133,7 +133,9 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-# opacity-rule = []
+opacity-rule = [
+  "90:class_g = 'Alacritty'"
+]
 
 
 #################################
@@ -158,8 +160,8 @@ rounded-corners-exclude = [
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-# blur-method =
-# blur-size = 12
+blur-method = "dual_kawase";
+blur-size = 12;
 #
 # blur-deviation = false
 #
@@ -212,12 +214,12 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-# backend = "glx"
-backend = "xrender";
+backend = "glx"
+# backend = "xrender";
 
 # Enable/disable VSync.
-# vsync = false
-vsync = true;
+vsync = false
+# vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
