--- a/i3/config
+++ b/i3/config
@@ -154,6 +154,8 @@ bindsym Mod1+Shift+r restart
 bindsym Mod1+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 # start terminal on startup
 exec --no-startup-id i3-sensible-terminal
+# start picom
+# exec --no-startup-id picom &
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
