add rule to move anki to last workspace

--- a/i3/config
+++ b/i3/config
@@ -101,6 +101,7 @@ bindsym $mod+a focus parent
 # bindsym $mod+d focus child
 
 for_window [class="firefox"] move to workspace $ws2
+for_window [class="Anki"] move to workspace $ws10
 
 # --------------- SCRATCHPAD ---------------
 # move the currently focused window to the scratchpad
