--- a/i3/keybindings.conf
+++ b/i3/keybindings.conf
@@ -73,7 +73,13 @@ bindsym $mod+e layout toggle split
 bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+# bindsym $mod+space focus mode_toggle
+
+# open rofi on window opener mode
+bindsym $mod+space exec rofi -show combi -modes combi -combi-modes "drun#run"
+
+# open rofi on window switcher mode
+bindcode $mod+23 exec rofi -show window -modes window
 
 # focus the parent container
 bindsym $mod+a focus parent
