--- a/i3/config
+++ b/i3/config
@@ -30,6 +30,8 @@ exec --no-startup-id i3-sensible-terminal
 exec --no-startup-id picom &
 # start eww for widgets
 exec --no-startup-id eww daemon
+# start polybar
+exec --no-startup-id polybar &
 
 # DEFAULT STUFF THAT I HAVEN'T TOUCHED YET
 
