--- a/i3/config
+++ b/i3/config
@@ -31,7 +31,7 @@ exec --no-startup-id picom &
 # start eww for widgets
 exec --no-startup-id eww daemon
 # start polybar
-exec --no-startup-id polybar &
+exec --no-startup-id polybar -r &
 
 # DEFAULT STUFF THAT I HAVEN'T TOUCHED YET
 
