start writing custom eww bar

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,5 +1,5 @@
 [colors]
-background = #282A2E
+background = #111517
 background-alt = #373B41
 foreground = #C5C8C6
 primary = #F0C674
@@ -31,6 +31,7 @@ separator = |
 separator-foreground = ${colors.disabled}
 
 font-0 = MapleMono:size=12;2
+font-1 = Material Icons
 
 modules-left = xworkspaces xwindow
 modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
