--- a/i3/config
+++ b/i3/config
@@ -6,16 +6,16 @@ set $up k
 set $down j
 set $left h
 set $right l
-set $ws1 "1: term"
-set $ws2 "2: web"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10: float"
+set $ws1 "1: I"
+set $ws2 "2: II"
+set $ws3 "3: III"
+set $ws4 "4: IV"
+set $ws5 "5: V"
+set $ws6 "6: VI"
+set $ws7 "7: VII"
+set $ws8 "8: VIII"
+set $ws9 "9: IX"
+set $ws10 "10: X"
 
 include keybindings.conf
 include layout.conf
