--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -9,8 +9,8 @@ disabled = #707880
 
 [bar/example]
 width = 100%
-height = 24pt
-radius = 6
+height = 50px
+radius = 16px
 
 ; dpi = 96
 
@@ -19,11 +19,11 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 4pt
+border-size = 10px
+border-bottom-size = 0
 border-color = #00000000
 
-padding-left = 0
-padding-right = 1
+padding-right = 2
 
 module-margin = 1
 
@@ -33,7 +33,7 @@ separator-foreground = ${colors.disabled}
 font-0 = MapleMono:size=12;2
 font-1 = Material Icons
 
-modules-left = xworkspaces xwindow
+modules-left = i3
 modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
 
 cursor-click = pointer
@@ -49,24 +49,19 @@ enable-ipc = true
 
 ; override-redirect = true
 
-[module/xworkspaces]
-type = internal/xworkspaces
+[module/i3]
+type = internal/i3
+strip-wsnumbers=true
 
-label-active = %name%
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
-label-active-padding = 1
+label-focused = %name%
+label-focused-background = #565E68
+label-focused-foreground = #F5BA4B
+label-focused-padding = 1
+label-focused-underline = #F5BA4B
 
-label-occupied = %name%
-label-occupied-padding = 1
-
-label-urgent = %name%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
-
-label-empty = %name%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
+label-unfocused = %name%
+label-unfocused-foreground = #565E68
+label-unfocused-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
