--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -125,16 +125,16 @@ window:
 font:
   size: 14
   normal:
-    family: MapleMono
+    family: JetBrainsMonoNerdFont
     style: Regular
   bold:
-    family: MapleMono
+    family: JetBrainsMonoNerdFont
     style: Bold
   italic:
-    family: MapleMono
+    family: JetBrainsMonoNerdFont
     style: Italic
   bold_italic:
-    family: MapleMono
+    family: JetBrainsMonoNerdFont
     style: Bold Italic
 
   # Point size
