--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -30,11 +30,11 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = MapleMono:size=12;2
+font-0 = JetBrainsMono Nerd Font:size=12;2
 font-1 = Material Icons
 
 modules-left = i3
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+modules-right = filesystem xkeyboard wlan eth date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -62,10 +62,6 @@ label-focused-underline = #F5BA4B
 label-unfocused = %name%
 label-unfocused-foreground = #565E68
 label-unfocused-padding = 1
-
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:60:...%
 
 [module/filesystem]
 type = internal/fs
@@ -126,7 +122,7 @@ label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+label-connected = %{T2}%{T-}%essid% %local_ip%
 
 [module/eth]
 inherit = network-base
@@ -137,8 +133,7 @@ label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 type = internal/date
 interval = 1
 
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+date = %d/%m/%Y  %a  %H:%M
 
 label = %date%
 label-foreground = ${colors.primary}
