[2023-10-14_14:25] pacman install/remove hook

--- a/i3/keybindings.conf
+++ b/i3/keybindings.conf
@@ -11,7 +11,7 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+c reload
 
 # kill focused window
-bindsym $mod+c kill
+bindsym $mod+x kill
 
 # focus window in given direction
 bindsym $mod+$left focus left
