--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -31,7 +31,7 @@ separator = |
 separator-foreground = ${colors.disabled}
 
 font-0 = JetBrainsMono Nerd Font:size=12;2
-font-1 = Material Icons
+font-1 = Material Icons:size=14;4
 
 modules-left = i3
 modules-right = filesystem xkeyboard wlan eth date
@@ -122,7 +122,8 @@ label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{T2}%{T-}%essid% %local_ip%
+label-connected = %{T2} %{T-}%essid%
+label-disconnected = %{T2}%{T-}
 
 [module/eth]
 inherit = network-base
