add icon to keyboard section in polybar

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -90,7 +90,7 @@ label-muted-foreground = ${colors.disabled}
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-label-layout = %layout%
+label-layout = %{T2}%{T-} %layout%
 label-layout-foreground = ${colors.primary}
 
 label-indicator-padding = 2
