--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -34,7 +34,7 @@ font-0 = JetBrainsMono Nerd Font:size=12;2
 font-1 = Material Icons:size=14;4
 
 modules-left = i3
-modules-right = filesystem xkeyboard wlan eth date
+modules-right = filesystem battery xkeyboard wlan eth date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -85,6 +85,28 @@ label-volume = %percentage%%
 
 label-muted = muted
 label-muted-foreground = ${colors.disabled}
+
+[module/battery]
+type = internal/battery
+battery = BAT0
+format-charging = <animation-charging><label-charging>
+label-charging = %percentage%%%{T2}%{T-}
+animation-charging-0 = %{T2}%{T-}
+animation-charging-1 = %{T2}%{T-}
+animation-charging-2 = %{T2}%{T-}
+animation-charging-3 = %{T2}%{T-}
+animation-charging-4 = %{T2}%{T-}
+animation-changing-framerate = 50
+
+format-discharging = <ramp-capacity><label-discharging>
+label-discharging = %percentage%%
+ramp-capacity-0 = %{T2}%{T-}
+ramp-capacity-1 = %{T2}%{T-}
+ramp-capacity-2 = %{T2}%{T-}
+ramp-capacity-3 = %{T2}%{T-}
+ramp-capacity-4 = %{T2}%{T-}
+
+label-low = BATTERY LOW
 
 [module/xkeyboard]
 type = internal/xkeyboard
