--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -34,7 +34,7 @@ font-0 = JetBrainsMono Nerd Font:size=12;2
 font-1 = Material Icons:size=14;4
 
 modules-left = i3
-modules-right = filesystem battery xkeyboard wlan eth date
+modules-right = filesystem alsa battery xkeyboard wlan eth date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -74,17 +74,13 @@ label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
 
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
-
-label-volume = %percentage%%
-
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
+[module/alsa]
+type = internal/alsa
+format-volume = <ramp-volume> <label-volume>
+label-muted = %{T2}%{T-}
+ramp-volume-0 = %{T2}%{T-}
+ramp-volume-1 = %{T2}%{T-}
+ramp-volume-2 = %{T2}%{T-}
 
 [module/battery]
 type = internal/battery
