--- a/i3/keybindings.conf
+++ b/i3/keybindings.conf
@@ -87,8 +87,12 @@ bindsym $mod+a focus parent
 # focus the child container
 # bindsym $mod+d focus child
 
+# increase volume
+bindsym $mod+plus exec amixer set Master 5%+
+bindsym $mod+minus exec amixer set Master 5%-
+
 # move the currently focused window to the scratchpad
-bindsym $mod+Shift+minus move scratchpad
+# bindsym $mod+Shift+minus move scratchpad
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
-bindsym $mod+minus scratchpad show
+# bindsym $mod+minus scratchpad show
