[2023-10-16_21:08] pacman install/remove hook

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -76,6 +76,7 @@ label-unmounted-foreground = ${colors.disabled}
 
 [module/alsa]
 type = internal/alsa
+master-mixer = Master
 format-volume = <ramp-volume> <label-volume>
 label-muted = %{T2}%{T-}
 ramp-volume-0 = %{T2}%{T-}
