--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -34,7 +34,7 @@ font-0 = JetBrainsMono Nerd Font:size=12;2
 font-1 = Material Icons:size=14;4
 
 modules-left = i3
-modules-right = filesystem alsa battery xkeyboard wlan eth date
+modules-right = backlight alsa battery xkeyboard wlan eth date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -63,16 +63,17 @@ label-unfocused = %name%
 label-unfocused-foreground = #565E68
 label-unfocused-padding = 1
 
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
+[module/backlight]
+type = internal/backlight
+card = intel_backlight
+use_actual_brightness = true
+format = <ramp> <label>
+label = %percentage%%
+ramp-0 = %{T2}%{T-}
+ramp-1 = %{T2}%{T-}
+ramp-2 = %{T2}%{T-}
+ramp-3 = %{T2}%{T-}
+ramp-4 = %{T2}%{T-}
 
 [module/alsa]
 type = internal/alsa
