add keybindings to control backlight

--- a/i3/keybindings.conf
+++ b/i3/keybindings.conf
@@ -87,9 +87,14 @@ bindsym $mod+a focus parent
 # focus the child container
 # bindsym $mod+d focus child
 
-# increase volume
+# increase, decrease and mute volume
 bindsym $mod+plus exec amixer set Master 5%+
 bindsym $mod+minus exec amixer set Master 5%-
+bindsym $mod+m exec amixer set Master toggle
+
+# increase and decrease backlight
+bindsym $mod+shift+plus exec brillo -q -A 5
+bindsym $mod+shift+minus exec brillo -q -U 5
 
 # move the currently focused window to the scratchpad
 # bindsym $mod+Shift+minus move scratchpad
