--- a/i3/keybindings.conf
+++ b/i3/keybindings.conf
@@ -82,10 +82,10 @@ bindsym $mod+space exec rofi -show combi -modes combi -combi-modes "drun#run"
 bindcode $mod+23 exec rofi -show window -modes window
 
 # focus the parent container
-bindsym $mod+a focus parent
+bindsym $mod+u focus parent
 
 # focus the child container
-# bindsym $mod+d focus child
+bindsym $mod+d focus child
 
 # increase, decrease and mute volume
 bindsym $mod+plus exec amixer set Master 5%+
