add layout rule for vscode

--- a/i3/layout.conf
+++ b/i3/layout.conf
@@ -1,2 +1,3 @@
 for_window [class="firefox"] move to workspace $ws2
+for_window [class="Code"] move to workspace $ws3
 for_window [class="Anki"] move to workspace $ws10
