--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -7,9 +7,9 @@ secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
 
-[bar/example]
+[bar/main]
 width = 100%
-height = 50px
+height = 45px
 radius = 16px
 
 ; dpi = 96
