configure i3 some more

--- a/i3/layout.conf
+++ b/i3/layout.conf
@@ -1,3 +1,7 @@
 for_window [class="firefox"] move to workspace $ws2
 for_window [class="Code"] move to workspace $ws3
+
 for_window [class="Anki"] move to workspace $ws10
+for_window [class="Anki"] floating enable
+for_window [class="1password"] move to workspace $ws10
+for_window [class="1password"] floating enable
