--- a/i3/config
+++ b/i3/config
@@ -32,6 +32,8 @@ exec --no-startup-id picom &
 exec --no-startup-id eww daemon
 # start polybar
 exec --no-startup-id polybar -r &
+# start firefox with some default tabs
+exec --no-startup-id firefox --new-tab calendar.google.com --new-tab gmail.com --new-tab twitter.com
 
 # DEFAULT STUFF THAT I HAVEN'T TOUCHED YET
 
