--- a/i3/layout.conf
+++ b/i3/layout.conf
@@ -1,5 +1,6 @@
 for_window [class="firefox"] move to workspace $ws2
 for_window [class="Code"] move to workspace $ws3
+for_window [class="Spotify"] move to workspace $ws4
 
 for_window [class="Anki"] move to workspace $ws10
 for_window [class="Anki"] floating enable
