--- a/i3/keybindings.conf
+++ b/i3/keybindings.conf
@@ -49,6 +49,10 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
+# move to next/previous workspce
+bindsym $mod+n workspace next
+bindsym $mod+p workspace prev
+
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
 
