adjust polybar to deal with different keyboard layouts

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -107,7 +107,8 @@ label-low = BATTERY LOW
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-label-layout = %{T2}%{T-} %layout%
+label-layout = %{T2}%{T-} %layout%%icon%
+layout-icon-0 = us;intl; intl
 label-layout-foreground = ${colors.primary}
 
 label-indicator-padding = 2
