[2023-10-29_15:06] pacman install/remove hook

--- a/i3/keybindings.conf
+++ b/i3/keybindings.conf
@@ -51,7 +51,7 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 
 # move to next/previous workspce
 bindsym $mod+n workspace next
-bindsym $mod+p workspace prev
+bindsym $mod+b workspace prev
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
