change polybar i3 workspace icons

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -29,8 +29,10 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = JetBrainsMono Nerd Font:size=12;2
-font-1 = Material Icons:size=14;4
+font-0 = "JetBrainsMono Nerd Font:size=12;2"
+font-1 = "Material Icons:size=14;4"
+font-2 = "Font Awesome 6 Brands:size=14;2"
+font-3 = "Font Awesome 6 Free:size=14;2"
 
 modules-left = i3
 modules-right = backlight alsa battery xkeyboard wlan eth date
@@ -50,7 +52,12 @@ enable-ipc = true
 [module/i3]
 type = internal/i3
 
-label-focused = %name%
+ws-icon-0 = 1;%{T2}%{T-}
+ws-icon-1 = 2;%{T3}%{T-}
+ws-icon-2 = 3;%{T2}%{T-}
+ws-icon-3 = 4;%{T2}%{T-}
+
+label-focused = %name% %icon%
 label-focused-background = #565E68
 label-focused-foreground = #F5BA4B
 label-focused-padding = 1
