--- a/i3/config
+++ b/i3/config
@@ -6,16 +6,16 @@ set $up k
 set $down j
 set $left h
 set $right l
-set $ws1 "1: term"
-set $ws2 "2: web"
-set $ws3 "3: dev"
-set $ws4 "4: media"
-set $ws5 "5: docs"
-set $ws6 "6: file"
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
-set $ws10 "10: etc"
+set $ws10 "10"
 
 include keybindings.conf
 include layout.conf
