--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -63,7 +63,7 @@ label-focused-foreground = #F5BA4B
 label-focused-padding = 1
 label-focused-underline = #F5BA4B
 
-label-unfocused = %name%
+label-unfocused = %name% %icon%
 label-unfocused-foreground = #565E68
 label-unfocused-padding = 1
 
