change polybar appearance

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -18,7 +18,8 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 10px
+border-size = 0
+border-top-size = 0
 border-bottom-size = 0
 border-color = #00000000
 
