--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -57,6 +57,9 @@ ws-icon-0 = 1;%{T2}%{T-}
 ws-icon-1 = 2;%{T3}%{T-}
 ws-icon-2 = 3;%{T2}%{T-}
 ws-icon-3 = 4;%{T2}%{T-}
+ws-icon-4 = 5;%{T2}%{T-}
+ws-icon-5 = 6;%{T2}%{T-}
+ws-icon-6 = 7;%{T2}%{T-}
 
 label-focused = %name% %icon%
 label-focused-background = #565E68
