edit font configuration

--- a/fontconfig/fonts.conf
+++ b/fontconfig/fonts.conf
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
+  <!-- Use these fonts as the default fonts for monospace, sans-serif and serif fonts -->
   <match target="pattern">
     <test name="family" qual="any">
       <string>monospace</string>
@@ -14,8 +15,7 @@
       <string>sans-serif</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>JetBrainsMono Nerd Font</string>
+      <string>SF Pro Display</string>
     </edit>
   </match>
-
 </fontconfig>
