add merriweather as default serif font

--- a/fontconfig/fonts.conf
+++ b/fontconfig/fonts.conf
@@ -18,4 +18,12 @@
       <string>SF Pro Display</string>
     </edit>
   </match>
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>serif</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Merriweather</string>
+    </edit>
+  </match>
 </fontconfig>
