add script to change ketyboard layout

--- a/i3/keybindings.conf
+++ b/i3/keybindings.conf
@@ -100,6 +100,9 @@ bindsym $mod+m exec amixer set Master toggle
 bindsym $mod+shift+plus exec brillo  -q -A 3
 bindsym $mod+shift+minus exec brillo  -q -U 3
 
+# toggle keyboard layout
+bindsym Control+Shift+space exec fish -c 'toggle_keyboard_layout'
+
 # move the currently focused window to the scratchpad
 # bindsym $mod+Shift+minus move scratchpad
 # Show the next scratchpad window or hide the focused scratchpad window.
