change default layout for specific layouts

--- a/i3/layout.conf
+++ b/i3/layout.conf
@@ -1,8 +1,9 @@
 for_window [class="firefox"] move to workspace $ws2
-for_window [class="Code"] move to workspace $ws3
-for_window [class="Spotify"] move to workspace $ws4
 
-for_window [class="Anki"] move to workspace $ws10
-for_window [class="Anki"] floating enable
-for_window [class="1password"] move to workspace $ws10
-for_window [class="1password"] floating enable
+for_window [class="Code"] move to workspace $ws3, layout tabbed
+for_window [class="Insomnia"] move to workspace $ws3, layout tabbed
+
+for_window [class="Spotify"] move to workspace $ws4, layout tabbed
+
+for_window [class="Anki"]  move to workspace $ws7, layout tabbed
+for_window [class="1password"]  move to workspace $ws7, layout tabbed
