[2023-10-31_19:01] pacman install/remove hook

--- a/i3/layout.conf
+++ b/i3/layout.conf
@@ -5,5 +5,9 @@ for_window [class="Insomnia"] move to workspace $ws3, layout tabbed
 
 for_window [class="Spotify"] move to workspace $ws4, layout tabbed
 
+for_window [class="okular"] move to workspace $ws5, layout tabbed
+
+for_window [class="dolphin"] move to workspace $ws6, layout tabbed
+
 for_window [class="Anki"]  move to workspace $ws7, layout tabbed
 for_window [class="1password"]  move to workspace $ws7, layout tabbed
