configure dolphin gt theme

--- a/i3/layout.conf
+++ b/i3/layout.conf
@@ -4,6 +4,7 @@ for_window [class="Code"] move to workspace $ws3, layout tabbed
 for_window [class="Insomnia"] move to workspace $ws3, layout tabbed
 
 for_window [class="Spotify"] move to workspace $ws4, layout tabbed
+for_window [class="vlc"] move to workspace $ws4, layout tabbed
 
 for_window [class="okular"] move to workspace $ws5, layout tabbed
 
