--- a/i3/layout.conf
+++ b/i3/layout.conf
@@ -5,6 +5,7 @@ for_window [class="Insomnia"] move to workspace $ws3, layout tabbed
 
 for_window [class="Spotify"] move to workspace $ws4, layout tabbed
 for_window [class="vlc"] move to workspace $ws4, layout tabbed
+for_window [class="Stremio"] move to workspace $ws4, layout tabbed
 
 for_window [class="okular"] move to workspace $ws5, layout tabbed
 
