add plasma i3 layout configuration

--- a/i3/keybindings.conf
+++ b/i3/keybindings.conf
@@ -80,7 +80,8 @@ bindsym $mod+Shift+space floating toggle
 # bindsym $mod+space focus mode_toggle
 
 # open rofi on window opener mode
-bindsym $mod+space exec rofi -show combi -modes combi -combi-modes "drun#run"
+# bindsym $mod+space exec rofi -show combi -modes combi -combi-modes "drun#run"
+bindsym $mod+space exec krunner
 
 # open rofi on window switcher mode
 bindcode $mod+23 exec rofi -show window -modes window
