--- a/i3/layout.conf
+++ b/i3/layout.conf
@@ -15,6 +15,7 @@ for_window [class="Anki"]  move to workspace $ws7, layout tabbed
 for_window [class="1password"]  move to workspace $ws7, layout tabbed
 
 for_window [title="Desktop — Plasma"] kill, floating enable, border none
+for_window [class="systemsettings"] floating enable, border none
 for_window [class="plasmashell"] floating enable
 for_window [class="Plasma"] floating enable, border none
 for_window [title="plasma-desktop"] floating enable, border none
