make dolphin and spectacle float

--- a/i3/keybindings.conf
+++ b/i3/keybindings.conf
@@ -109,3 +109,5 @@ bindsym Control+Shift+space exec fish -c 'toggle_keyboard_layout'
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
 # bindsym $mod+minus scratchpad show
+
+bindsym $mod+shift+p exec spectacle
