--- a/i3/layout.conf
+++ b/i3/layout.conf
@@ -9,7 +9,7 @@ for_window [class="Stremio"] move to workspace $ws4, layout tabbed
 
 for_window [class="okular"] move to workspace $ws5, layout tabbed
 
-for_window [class="dolphin"] move to workspace $ws6, layout tabbed
+for_window [class="dolphin"] floating enable, border none
 
 for_window [class="Anki"]  move to workspace $ws7, layout tabbed
 for_window [class="1password"]  move to workspace $ws7, layout tabbed
@@ -26,4 +26,5 @@ for_window [class="Klipper"] floating enable, border none
 for_window [class="Plasmoidviewer"] floating enable, border none
 for_window [class="(?i)*nextcloud*"] floating disable
 for_window [class="plasmashell" window_type="notification"] floating enable, border none, move right 700px, move down 450px
+for_window [class="spectacle"] floating enable, border none
 no_focus [class="plasmashell" window_type="notification"]
