--- a/i3/layout.conf
+++ b/i3/layout.conf
@@ -27,4 +27,5 @@ for_window [class="Plasmoidviewer"] floating enable, border none
 for_window [class="(?i)*nextcloud*"] floating disable
 for_window [class="plasmashell" window_type="notification"] floating enable, border none, move right 700px, move down 450px
 for_window [class="spectacle"] floating enable, border none
+for_window [class="systemsettings"] floating enable, border none
 no_focus [class="plasmashell" window_type="notification"]
