make anki float

--- a/i3/layout.conf
+++ b/i3/layout.conf
@@ -11,7 +11,7 @@ for_window [class="okular"] move to workspace $ws5, layout tabbed
 
 for_window [class="dolphin"] floating enable, border none
 
-for_window [class="Anki"]  move to workspace $ws7, layout tabbed
+for_window [class="Anki"]  floating enable, border none
 for_window [class="1password"]  move to workspace $ws7, layout tabbed
 
 for_window [title="Desktop — Plasma"] kill, floating enable, border none
