[2024-03-25_08:36] pacman install/remove hook

--- a/code/settings.json
+++ b/code/settings.json
@@ -172,5 +172,6 @@
   },
   "workbench.startupEditor": "none",
   "extensions.ignoreRecommendations": true,
-  "window.zoomLevel": 1
+  "window.zoomLevel": 1,
+  "typescript.tsserver.log": "verbose"
 }
