[2024-04-21_17:09] pacman install/remove hook

--- a/code/settings.json
+++ b/code/settings.json
@@ -166,7 +166,7 @@
     "*.jsx": "${capture}.js",
     "*.tsx": "${capture}.ts",
     "tsconfig.json": "tsconfig.*.json",
-    "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, .eslint*, .prettier*, .editorconfig, tsconfig.*",
+    "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, .eslint*, .prettier*, .editorconfig, tsconfig.*, .nvmrc",
     ".env": ".env*"
   },
   "workbench.startupEditor": "none",
