[2024-06-26_23:04] updating packages list

--- a/code/settings.json
+++ b/code/settings.json
@@ -1,6 +1,6 @@
 {
   "workbench.colorTheme": "Kanagawa",
-  "editor.fontFamily": "JetBrainsMono Nerd Font",
+  "editor.fontFamily": "Input Mono Narrow, JetBrainsMono Nerd Font",
   "editor.fontLigatures": true,
   "editor.fontSize": 14,
   "editor.lineHeight": 1.8,
