[2024-07-07_16:10] updating packages list

--- a/code/settings.json
+++ b/code/settings.json
@@ -49,6 +49,11 @@
       "before": ["<leader>", "h"],
       "commands": ["editor.action.showHover"],
       "silent": true
+    },
+    {
+      "before": ["<leader>", "r"],
+      "commands": ["editor.action.rename"],
+      "silent": true
     }
   ],
   "vim.leader": "<space>",
