[2024-10-09_12:40] updating packages list

--- a/code/settings.json
+++ b/code/settings.json
@@ -183,5 +183,6 @@
   "[go]": {
     "editor.defaultFormatter": "golang.go"
   },
-  "prettier.printWidth": 100
+  "prettier.printWidth": 100,
+  "prettier.singleQuote": true
 }
