add some more basic tmux confing

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,16 @@
+# Move prefix key from Ctrl-b to Ctrl-A
 unbind C-b
 set-option -g prefix C-a
-bind-key C-a send-prefix
+bind C-a send-prefix
+
+# Better window splitting
+bind -N "Split the window horizontally" | split-window -h
+bind -N "Split the window vertically" - split-window -v
+unbind '"'
+unbind %
+
+# Better pane navigation
+bind -N "Go to the pane on the left" h select-pane -L
+bind -N "Go to the pane on the right" l select-pane -R
+bind -N "Go to the pane above" k select-pane -U
+bind -N "Go to the pane below" j select-pane -D
