enable mouse on tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,6 +3,9 @@ unbind C-b
 set-option -g prefix C-a
 bind C-a send-prefix
 
+# Enable mouse
+set -g mouse on
+
 # Better window splitting
 bind -N "Split the window horizontally" | split-window -h
 bind -N "Split the window vertically" - split-window -v
