configure tmux a bit more

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,3 +17,14 @@ bind -N "Go to the pane on the left" h select-pane -L
 bind -N "Go to the pane on the right" l select-pane -R
 bind -N "Go to the pane above" k select-pane -U
 bind -N "Go to the pane below" j select-pane -D
+
+# Easy config reload
+bind -N "Reload configuration file" r source-file ~/.tmux.conf
+
+# Allow tmux to set the clipboard for the outside terminal
+set -s set-clipboard external # external does not allow apps inside tmux to create tmux paste buffer!
+
+# Copy mode configs
+bind -N "Start selection in copy mode" -T copy-mode-vi v send -X begin-selection
+bind -N "Copy current selection and exit copy mode" -T copy-mode-vi y send -X copy-selection-and-cancel
+bind -N "Paste buffer" P paste-buffer
