add tmux keybinding

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,3 +28,5 @@ set -s set-clipboard external # external does not allow apps inside tmux to crea
 bind -N "Start selection in copy mode" -T copy-mode-vi v send -X begin-selection
 bind -N "Copy current selection and exit copy mode" -T copy-mode-vi y send -X copy-selection-and-cancel
 bind -N "Paste buffer" P paste-buffer
+
+bind -N "Create new session" C-c new-session
