--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,10 +1,19 @@
 # Move prefix key from Ctrl-b to Ctrl-A
 unbind C-b
 set-option -g prefix C-a
-bind C-a send-prefix
 
 # Enable mouse
 set -g mouse on
+
+# Increase scrollback buffer size
+set -g history-limit 50000
+
+# tmux messages are displayed for 4 seconds
+set -g display-time 4000
+
+bind -N "Send prefix to shell" C-a send-prefix
+
+bind -N "Switch between alternate windows" a last-window
 
 # Better window splitting
 bind -N "Split the window horizontally" | split-window -h
@@ -18,8 +27,8 @@ bind -N "Go to the pane on the right" l select-pane -R
 bind -N "Go to the pane above" k select-pane -U
 bind -N "Go to the pane below" j select-pane -D
 
-# Easy config reload
-bind -N "Reload configuration file" r source-file ~/.tmux.conf
+# Easy config reload with message
+bind -N "Reload configuration file" r source-file ~/.tmux.conf \; display-message -d 1000 "config reloaded"
 
 # Allow tmux to set the clipboard for the outside terminal
 set -s set-clipboard external # external does not allow apps inside tmux to create tmux paste buffer!
@@ -30,3 +39,9 @@ bind -N "Copy current selection and exit copy mode" -T copy-mode-vi y send -X co
 bind -N "Paste buffer" P paste-buffer
 
 bind -N "Create new session" C-c new-session
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+
+# Initialize TMUX plugin manager
+run '~/.tmux/plugins/tpm/tpm'
