[2024-12-30_10:00] updating vscode extensions list

--- a/code/settings.json
+++ b/code/settings.json
@@ -187,5 +187,6 @@
   "prettier.singleQuote": true,
   "[sql]": {
     "editor.defaultFormatter": "inferrinizzard.prettier-sql-vscode"
-  }
+  },
+  "prettier.proseWrap": "always"
 }
