[2025-01-05_10:00] updating vscode extensions list

--- a/code/settings.json
+++ b/code/settings.json
@@ -100,7 +100,8 @@
   },
   "cSpell.enableFiletypes": ["!cpp"],
   "workbench.editorAssociations": {
-    "*.ipynb": "jupyter-notebook"
+    "*.ipynb": "jupyter-notebook",
+    "{git,gitlens,git-graph}:/**/*.{md,csv,svg}": "default"
   },
   "editor.cursorStyle": "line",
   "editor.lineNumbers": "relative",
