[2025-02-06_13:05] updating vscode extensions list

--- a/code/settings.json
+++ b/code/settings.json
@@ -147,7 +147,8 @@
   },
   "files.associations": {
     "*.y": "yacc",
-    ".example.env": "properties"
+    ".example.env": "properties",
+    "*.css": "tailwindcss"
   },
   "C_Cpp.vcFormat.indent.caseLabels": true,
   "C_Cpp.vcFormat.indent.caseContentsWhenBlock": true,
