[2025-02-07_11:04] updating vscode extensions list

--- a/code/settings.json
+++ b/code/settings.json
@@ -158,6 +158,9 @@
   "[astro]": {
     "editor.defaultFormatter": "astro-build.astro-vscode"
   },
+  "[tailwindcss]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
   "symbols.hidesExplorerArrows": false,
   "apc.stylesheet": {
     ".title-label > h2": "display: none",
