[2025-02-08_10:00] updating vscode extensions list

--- a/code/settings.json
+++ b/code/settings.json
@@ -148,7 +148,8 @@
   "files.associations": {
     "*.y": "yacc",
     ".example.env": "properties",
-    "*.css": "tailwindcss"
+    "*.css": "tailwindcss",
+    "*.scss": "tailwindcss"
   },
   "C_Cpp.vcFormat.indent.caseLabels": true,
   "C_Cpp.vcFormat.indent.caseContentsWhenBlock": true,
