[2025-05-25_10:00] updating vscode extensions list

--- a/code/settings.json
+++ b/code/settings.json
@@ -198,5 +198,6 @@
   "workbench.layoutControl.enabled": false,
   "workbench.navigationControl.enabled": false,
   "window.commandCenter": false,
-  "window.menuBarVisibility": "compact"
+  "window.menuBarVisibility": "compact",
+  "diffEditor.ignoreTrimWhitespace": true
 }
