[2025-06-06_10:19] updating vscode extensions list

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,6 +11,10 @@ set -g history-limit 50000
 # tmux messages are displayed for 4 seconds
 set -g display-time 4000
 
+# statusline configuration
+set -g status-position top
+set -g status-style bg=black,fg=white
+
 bind -N "Send prefix to shell" C-a send-prefix
 
 bind -N "Switch between alternate windows" a last-window
